--- a/script/references.bib
+++ b/script/references.bib
@@ -1332,3 +1332,33 @@ DOI: 10.1093/oso/9780198795209.001.0001}
 	url = {https://link.springer.com/article/10.1007/s10869-017-9528-3},
 	note = {Publisher: Springer}
 }
+
+@article{roberts2016,
+	title = {A Model of Text for Experimentation in the Social Sciences},
+	author = {Roberts, Margaret E. and Stewart, Brandon M. and Airoldi, Edoardo M.},
+	year = {2016},
+	month = {07},
+	date = {2016-07-02},
+	journal = {Journal of the American Statistical Association},
+	pages = {988--1003},
+	volume = {111},
+	number = {515},
+	doi = {10.1080/01621459.2016.1141684},
+	url = {https://www.tandfonline.com/doi/full/10.1080/01621459.2016.1141684},
+	langid = {en}
+}
+
+@article{roberts2014,
+	title = {Structural Topic Models for Open-Ended Survey Responses},
+	author = {Roberts, Margaret E. and Stewart, Brandon M. and Tingley, Dustin and Lucas, Christopher and Leder-Luis, Jetson and Gadarian, Shana Kushner and Albertson, Bethany and Rand, David G.},
+	year = {2014},
+	month = {10},
+	date = {2014-10-01},
+	journal = {American Journal of Political Science},
+	pages = {1064--1082},
+	volume = {58},
+	number = {4},
+	doi = {10.1111/AJPS.12103},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/ajps.12103},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
