--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -39,7 +39,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Abstract
 
-Digital Government is a growing and vibrant multidisciplinary field of research, the fast increase in research output has challenged researchers to explore and use novel computational ways and methods to perform evidence synthesis on the extant literature and be able to map a scientific discipline, explore the thematic evolution over time and identify potential avenues for further research. Topic modeling has emerged as a powerful technique from the computer science field that is contributing to the examination of large amounts of text data. This manuscript demonstrates the training of a topic model aimed to dissect and perform a 'smart literature review' on a subset of the Digital Government Reference Library (DGRL) version 17.5. Structural topic modeling is a conceptual and methodological evolution of 'vanilla' topic modeling that allow the estimation of covariates contained in the metadata of corpora to calculate topic prelavence. To our best knowledge, this is the first attempt to use unsupervised machine learning techniques with this data set. This effort may contribute to creating a map of the field, identify the evolving themes in the literature and help to identify promising areas of research.
+Digital Government is a growing and vibrant multidisciplinary field of research, the fast increase in research output has challenged researchers to explore and use novel computational ways and methods to perform evidence synthesis on the extant literature and be able to map a scientific discipline, explore the thematic evolution over time and identify potential avenues for further research. Topic modeling has emerged as a powerful technique from the computer science field that is contributing to the examination of large amounts of text data. This manuscript demonstrates the training of a topic model aimed to assemble a 'smart literature review' on a subset of the Digital Government Reference Library (DGRL) version 17.5. Structural topic modeling is a conceptual and methodological evolution of 'vanilla' topic modeling that allow the estimation of covariates contained in the metadata of corpora to calculate topic prevalence in a corpus. To our best knowledge, this is the first attempt to use unsupervised machine learning techniques with this data set. This effort may contribute to creating a map of the field, identify the evolving themes in the literature and help to identify promising areas of research.
 
 ## Introduction
 
@@ -53,19 +53,23 @@ The Digital Government Research Library is a collection of bibliographic referen
 
 Previous explorations of this reference library have revealed the thematic evolution using bibliometric and scientometric approaches [@alcaide-muñoz2017], and identified the most influential journals, conferences and leading scholars in the field [@scholl2021a]. This data set has been used as well for conducting a systematic review on the impacts of e-Government using a public value perspective [@maclean2021a]. According to [@webster2002], accumulating a "complete census" of the relevant literature and following a concept-centric framework are crucial in a literature review. Concept-centric approaches with topic modeling might be conducted via the use of "seed word dictionaries" in semi-supervised topic models [@watanabe2020], but this technique is out of the scope of this manuscript.
 
-The study of the linkage between modern technologies and quality and quantity labor has been on the research agenda of diverse disciplines and academic fields such as economics[@dosi2021; @fernández-macías2022], industrial relations [@doellgast2022a], information systems [@klein2021], and organization studies [@barley2020a], primarily focused in the private sector of advanced democracies. Technological change is a very broad term that may include a wide array of ICT-enabled applications for automation, digitalization and robotization. Our attention is located in the digitalization of government, but despite the momentum in digital government research, one aspect that remains under explored is the effects of digital technologies on the public sector workforce [@plesner2018].
+The study of the linkage between modern technologies and the quality and quantity labor has been on the research agenda of diverse disciplines and academic fields such as economics[@dosi2021; @fernández-macías2022], industrial relations [@doellgast2022a], information systems [@klein2021], and organization studies [@barley2020a], primarily focused in the private sector from advanced democracies. Technological change is a very broad term that may include a wide array of ICT-enabled applications for automation, digitalization and robotization. Our attention is directed at the digitalization of government, but despite the momentum in digital government research, one aspect that remains under explored is the empirical assessment of the effects of digital technologies on the public sector workforce [@plesner2018].
 
-The public sector "composition" can be very heterogeneous in terms of scale and scope among diverse jurisdictions. Nonetheless, public sector organizations rank high among the largest sole employers globally in the form of armies and other defense related operations, State-Owned Enterprises (SOE) and health care providers, to name a few. The 'industries' in which public organizations operate are very diversified, have distinct degrees of technological sophistication and mixed levels of interaction with citizens and firms. In general, the public sector commands a large, diverse, and highly educated workforce.
+The public sector "composition" can be very heterogeneous in terms of scale and scope among diverse jurisdictions. Public sector organizations rank high globally among the largest employers in the form of armies and other defense related operations, State-Owned Enterprises (SOE), and health care providers, to name a few. The 'industries' in which public organizations operate are very diversified, have distinct degrees of technological sophistication and mixed levels of interaction with citizens and firms. In general, the public sector commands a large, diverse, and highly educated workforce.
 
-The public sector is also considered one of the largest adopters and users of ICT, and perform a key role in the creation and governance of enormous amounts of data [@guenduez2020; @lofgren2020]. Historically, governments have developed the required information infrastructure to manage data intensive operations such as population and property registries, tax collection, medical records among others. The pervasive deployment and use of digital technologies, digital platforms, and digital infrastructures has accelerated the rate of new data creation thus transforming the operations of firms and public organizations with profound implications for the organization of work [@nambisan2019].
+The public sector is also considered one of the largest adopters and users of ICT, and perform a key role in the creation and governance of enormous amounts of data [@guenduez2020; @lofgren2020]. Historically, governments have developed the required information infrastructure to manage data intensive operations such as population and property registries, tax collection, and medical records among others. The pervasive deployment and use of digital technologies, digital platforms, and digital infrastructures has accelerated the rate of new data creation thus transforming the operations of firms and public organizations with profound implications for the organization of work [@nambisan2019].
 
-The reported impact of digitalization on the organization work is diverse [@barley2001], it may automate work, create or eliminate jobs, deskill or reskill workers but also, little or negligible impact whatsoever. Digital government as a research field is in a phase of consolidation, allowing for the exploration of promising subfields for further inquiry. Digital technologies and the novel design of public services may facilitate a more intricate division of labor into smaller components (tasks), reconfiguring the workflow of public services, fostering new ways for multi-actor co-production [@bryson2016a], promoting the implementation of self-service solutions and facilitating scenarios for the co-production of public services [@scupola2021], turning each citizen and user into "his or her own administrator, caseworker and bureaucrat" [@schou2018], and possibly generating administrative burden of citizens [@madsen2021].
+The reported impact of digitalization on the organization work is diverse [@barley2001], it may automate work, create or eliminate jobs, deskill or reskill workers but also, little or negligible impact whatsoever. Digital government as a research field is in a phase of consolidation, allowing for the exploration of promising subfields for further inquiry. Digital technologies and the novel design of public services may facilitate a more intricate division of labor into smaller components (tasks), reconfiguring the workflow of public services, fostering new ways for multi-actor co-production [@bryson2016a], promoting the implementation of self-service solutions and facilitating scenarios for the co-production of public services [@scupola2021], turning each citizen and user into "his or her own administrator, caseworker and bureaucrat" [@schou2018], and possibly creating detrimental effects such as administrative burden for citizens [@madsen2021].
 
-These trends, enabled by the implementation of digital technologies in public organizations are changing the interaction between citizens and public officials turning it into a technology-mediated public encounter [@lindgren2019], generating changes in the organization of work, including task-redundancies and the creation of new occupations, to cope with an increasingly digitalized public sector. The argumentative arc presented above sparks the discussion of automation in a public sector context as an emerging topic of interest in the extant literature [@engin2019b; @andersson2021b; @lloyd2021a].
+These developments enabled by the implementation of digital technologies in public organizations are changing the interaction between citizens and public officials turning it into a technology-mediated public encounter [@lindgren2019], introducing changes in the organization of work in terms of task redundancies and the creation of new occupations, to cope with an increasingly digitalized public sector. The argumentative arc presented above sparks the discussion of automation in a public sector context as an emerging topic of interest in the extant literature [@engin2019b; @andersson2021b; @lloyd2021a].
 
-Conceptual developments in Digital Government Research have considered the success factors of digital government initiatives from both the supply and demand sides. However, given the intrinsic complexity associated with the public sector, a more elaborate discussion is found in the design and use literature that incorporates analytical dimensions such as power, ideology, design, and institutional change in the study of how novel technologies affect the organization of work [@bailey2020].
+Conceptual developments in Digital Government Research have considered the success factors of digital government initiatives from both the supply and demand sides. However, given the intrinsic complexity associated with the public sector, a more elaborate discussion is found in the design and use literature that incorporates analytic dimensions such as power, ideology, design, and institutional change in the study of how novel technologies affect the organization of work [@bailey2020].
 
-The relationship between digitalization and work is complex and multifaceted, its impacts are variegated among organizations, industries and employee groups [@doellgast2022b], however, it was the global health emergency in early 2020 that favored the newly gained awareness and increased the research interest in the subject matter [@nagel2020; @dingel2020; @mazzucato2020; @leonardi2021; @faraj2021]. Thus, it is deemed pertinent and timely to extend the scholarly exploration of the effects of technological change in the organization of work in public organizations and the potential consequences for the public sector workforce.
+The relationship between digitalization and work is complex and multifaceted, its impacts are variegated among organizations, industries and employee groups [@doellgast2022b], however, it was the global health emergency in early 2020 that favored the newly gained awareness and increased the research interest in the subject matter [@nagel2020; @dingel2020; @mazzucato2020; @leonardi2021; @faraj2021]. Thus, it is deemed pertinent and timely to pursue the scholarly exploration of the effects of technological change in public organizations and its consequences for the public sector workforce.
+
+The use of text based techniques and topic models have gained traction among scholars exploring the nexus between novel technologies and labor markets. Among these novel approaches are [@montobbio2022] that explore robots and labor-saving technologies, and [@kogan2019] that analyze patent contents to estimate technological change and labor displacement.
+
+Supervised, semi-supervised and unsupervised machine learning techniques for text analysis can be used in a wide range of disciplines to examine databases, repositories and corpora, hence expanding the methodological repertoire of researchers opening an opportunity to explore large troves of data. It is our opinion that this methodological innovation can be repurposed to explore the linkages between digitalization and organization of work in a public sector context.
 
 This initial argumentation lead us to formulate the following research questions:
 
@@ -77,7 +81,7 @@ RQ3: What does the extant literature (corpus) on Digital Government reveal on th
 
 The objective of this exercise is to analyze and present the results of the application of a structural topic model, a novel method for evidence synthesis, in the exploration of the effects of digitalization in the organization of work in the public sector. The advent of computerization and digitalization has had broad impacts in most aspects of contemporary life, including scientific research. Digitalization has influenced how research is designed and conducted, allowing for the creation and increased availability of ever-growing data sets that require powerful computational methods and enhanced tools to handle abundant information [@meyer2015]. Therefore, this manuscript aims to offset the reported "excessive use" of qualitative methods in e-government research [@arduini2014a], and answering to calls in the extant literature towards the pursuit of quantitative and empirically oriented approaches [@wirtz2016].
 
-## Literature Review and Conceptual framework
+## Literature Review and Conceptual Framework
 
 Studies in the history of science have identified a relatively sustained growth pattern in scientific publications over time, this exponential growth rate means a doubling in scientific output every 17 years approximately [@bornmann2021]. This level of growth might be attributed to the increased resources dedicated to the global scientific endeavor and consequently the communication of science via publications. However, it may also be due to what has been dubbed "salami sliced publishing" or the multiple publications of a single research study [@bornmann2007a; @bornmann2015].
 
@@ -85,35 +89,39 @@ Research synthesis is part of the literature review process in which the extant 
 
 Quantitative research synthesis techniques like bibliometrics and computer-assisted text mining allow the analysis of a larger quantity of documents and may contribute to advancing the "research fronts" in interdisciplinary fields such as Digital Government [@tanskanen2017]. Computational tools and techniques developed originally in the computer science field have been repurposed in diverse disciplines but also have enabled social scientists to exploit Natural Language Processing (NLP) applications for classification tasks of large scientific corpora. Topic modeling techniques, a subset of machine learning and NLP allow for the automatic classification of vast amounts of text data.
 
+Unstructured text has become one of the most prevalent types of data in the current "data deluge". In organization research, text is considered a key source of data as organizations publish content on their websites, social media and other searchable repositories [@kobayashi2017]. The use of text analysis or text mining is not necessarily new; however, the digitalization of everyday life has facilitated the creation, storage and analysis of enormous quantities of data in text format. Nonetheless the usage of text mining techniques has remained "disconnected among fields" [@banks2018].
+
 Probabilistic topic modeling is a method that extracts topics from a collection of text. According to the seminal work by [@blei2003b], Latent Dirichlet Allocation (LDA) applied to a corpus generates a probabilistic model in which documents are represented as the mixtures of latent topics, and topics are characterized by a distribution of words. LDA is considered the state-of-the-art, simplest and most used method to perform topic modeling [@asmussen2019a].
-
-Even though, these techniques originated in the computer science field and at first sight may seem arcane to newcomers, there have been important progress in other research areas towards facilitating the adoption of this powerful computational tool by lowering the technical barriers, the creation of agreed-upon workflows for modeling and visualization, and the development of relatively accessible software packages in open source statistical software like R and Python [@rehurek2010; @benoit2018a; @roberts2019].
-
-Unstructured text has become one of the most prevalent types of data in the current "data deluge". In organization research, text is considered a key source of data as organizations publish content on their websites, social media and other searchable repositories [@kobayashi2017]. The use of text analysis or text mining is not necessarily new; however, the digitalization of everyday life has allowed the creation, storage and analysis of enormous quantities of data in text format. Nonetheless the usage of text mining techniques has remained "disconnected among fields" [@banks2018].
-
-Using a text as data approach and an unsupervised machine learning technique known as topic modeling.
-
-Since its early stages of development, topic modeling techniques have been used for the analysis of large troves of text data in diverse scientific realms social media posts bibliographic content in diverse fields of research and academic disciplines including statistics [@debattisti2015], economics [@ambrosino2018], cliometrics [@wehrheim2019], innovation research [@antons2020b; @antons2017], and management [@hannigan2019].
-
-On occasions the scope of these analyses can be very large, [@ambrosino2018] studied the evolution in the thematic structure of the economics discipline by applying LDA to the full texts of articles published in 188 journals in the JSTOR database from 1845 to 2013 (n= 250846). Other implementations of these techniques [@antons2016], have explored the full text corpus of a single top ranking journal in innovation research over a three decade span (n=1008), alternative uses of this technique have considered the titles of dissertations in economics and chemistry in East and West Germany before and after the German reunification [@rehs2020].
-
-As advised by [@barberá2021], there are "consequential decisions" in the methodological choices of automated text classification and the fact that human validation is a key component of text as data methods. The selection of a corpus in itself is deemed a crucial decision that can be prone to four types of bias: resource bias, incentive bias, medium bias and retrieval bias, these selection biases are well acknowledged in the text as data literature [@grimmer2022]. It may be probable that the DGRL v17.5 has omitted important research that is not included in this collection. All decisions concerning text as data methodologies are "consequential", our aim is to make our workflow reproducible by documenting all the choices in the scripts associated with this document.
-
-In addition, the use of text based techniques and topic models have gained traction among scholars exploring the nexus between novel technologies and labor markets. Among these novel approaches are [@montobbio2022] that explore robots and labor-saving technologies, and [@kogan2019] that analyze patent contents to estimate technological change and labor displacement. In our opinion, this methodological innovation can be repurposed to explore the linkages between digitalization and organization of work in a public sector context.
 
 LDA models are becoming widely used in social science, however these techniques are not infallible and require rigorous validation and human interpretability [@maier2018], if not, it may be as factual as "reading tea leaves" as eloquently put it by [@chang2009]. For a robust analysis it is advised to take an iterative approach for build, compute, critique, and rebuild topic models [@blei2014].
 
-The implementation of LDA to bibliographic data has a relatively agreed-upon workflow. The script for the initial data cleaning and wrangling, including the R functions and packages used, is available for revision, clarity, and replicability. A second script describes the phase of pre-processing related to preparing the unstructured text data into a format that is usable for analysis. Steps like tokenization, removal of stopwords, symbols, and special characters, and conversion to lowercase, are part of this phase. The pre-processing was conducted in R statistical software using the functions of the quanteda R package [@benoit2018].
+Even though these techniques originated in the computer science field and at first sight may seem arcane to newcomers, there have been important progress in other research areas towards facilitating the adoption of this powerful computational tool by lowering the technical barriers, the creation of agreed-upon workflows for modeling and visualization, and the development of relatively accessible software packages in open source statistical software like R and Python [@rehurek2010; @benoit2018a; @roberts2019].
 
-LDA is an unsupervised machine learning method which means the relationship between words and topics is ignored prior to the execution of the model. Thus is deemed good practice to split the data between a training set and a test set. Our approach was to train with 75% of the corpus, leaving the remaining proportion for testing purposes. In addition, LDA topic modeling typically means that the topic structure is unknown and the number of topics (k) should be selected by the researcher. In general, a low number of topics is used for an overview, instead, a higher number of topics is used for more granular analysis of the corpus [@asmussen2019a].
+Topic modeling techniques applied to bibliographic data have been explored in diverse scientific realms and academic disciplines such as statistics [@debattisti2015], economics [@ambrosino2018], cliometrics [@wehrheim2019], innovation research [@antons2020b; @antons2017], and management [@hannigan2019]. The scope of these analyses can be very large, [@ambrosino2018] studied the evolution in the thematic structure of the economics discipline by applying LDA to the full texts of articles published in 188 journals in the JSTOR database from 1845 to 2013 (n= 250846). Other implementations have concentrated its attention and analysis, [@antons2016] explored the full text corpus (n=1008) of a single top ranking journal in innovation research over a three decade span.
+
+Structural Topic Modeling is a conceptual and technical evolution of the the typical topic modeling approach by incorporating the estimation of topic prevalence using covariates found in the metadata of the corpus [@roberts2016]. Applications of this method to bibliographic data have estimated the role of covariates such as temporal and geographic information in the analysis of the dissertation titles in economics and chemistry in East and West Germany before and after the German reunification [@rehs2020].
+
+LDA is an unsupervised machine learning method which means the relationship between words and topics is ignored prior to the execution of the model. Thus is deemed good practice to split the data between a training set and a test set. Our approach was to train the model with 75% of the corpus, leaving the remaining proportion for testing purposes. The optimal number of topics (k) is unknown and the researcher should selected this parameter. In general, a low number of topics is used for an overview, instead, a higher number of topics is used for more granular analysis of the corpus [@asmussen2019a].
+
+The evaluation of topic models can be performed through the calculation of goodness of fit statistics and the iterative calibration of the model to increase interpretability via "eye balling" the topics and their word-probability, and human judgement, meaning the implicit knowledge of the researcher on the subject matter of a corpus. A rule of thumb found in the documentation of the stm R package states that for small corpora, like the one used for this analysis containing "a few hundred to a few thousand" documents, 5 to 50 topics is "a good place to start. In addition, the stm R package includes functions for model selection, visualization and estimation of the effects of covariates in topic prevalence.
+
+Among the goodness of fit statistics is the held-out likelihood, also know as perplexity, which measures how well the probability model predicts unseen data. The lower the number of this statistic the higher the accuracy of the model for this task. Semantic coherence is another goodness of fit measure that is maximized when the most probable words in a topic co-occur frequently [@roberts2014].
+
+Lower bound
+
+Residuals
+
+The workflow for topic modeling includes text pre-processing, meaning further data cleaning and data transformation. This means that before creating a corpus object with the available information from the DGRL v17.5, the text should be prepared before running the initial explorations. Our main unit of analysis is the abstract of the journal articles contained in the processed data set of the DGRL v17.5. Text as a type of unstructured data can be structured for processing using the bag of words approach or the splitting of abstracts into separate word units or terms and every occurrence of a term is defined as a token. The creation of a bag of words is known as tokenizing. The bag of words approach deliberately ignores the syntax or structure of the text, additional treatment of text include the elimination of punctuation, transform each word to lowercase and in some cases stemming which is a way to reduce a word to its stem or root in order to reduce the sparsity of the Document Frequency Matrix.
+
+Probabilistic topic models are a type of unsupervised machine learning processes that allow the exploration of a vast collection of documents (also known as corpus), perform the automated classification of large amounts of textual data and hence assist scholars in research tasks such as discovery, measurement, prediction and causal inference.
+
+The implementation of LDA to textual data has a relatively agreed-upon workflow.
 
 Model optimization measures: predictive likelihood \* perplexity \* coherence \* exclusivity \* cutoff criteria loadings Antons et al 2016.
 
 Computational tools like topic models are enabling researchers to explore and analyze larger data sets of bibliographic information to conduct evidence synthesis.
 
 The scholarly exploration of the linkages between digitalization and the organization of work remains relatively unexplored in a public sector context.
-
-Unsupervised machine learning techniques for text analysis, this research technology can be used in a wide range of disciplines to examine databases, repositories and corpora thus expanding the methodological repertoire of scholars and opening an opportunity to explore large troves of data.
 
 Maier
 
@@ -135,7 +143,13 @@ Insert list of top journals.
 
 ## Methods and Data
 
-The Digital Government Research Library version 17.5 is a large curated repository of publications contributing to the field of Digital Government Research (DGR), it contains more than 16500 references among its records. The most prevalent types of documents are conference papers (33.2%) and journal articles (50%). The inclusion criteria of the DGRL are: to have passed academic peer review, to be published in an academic journal, to be published in English language [@scholl2021]. The Library can be downloaded from the website [DGRL](https://faculty.washington.edu/jscholl/dgrl/index.php). The download package contains three types of bibliographic files BibTeX, RIS, and ENL (EndNote). In its raw and unprocessed form, the data has a large proportion of missing values, mostly clustered in metadata not considered relevant for the analysis. By exploring the BiBTeX, RIS and ENL files, we noticed that the data sets had a large amount of missing data and that some information was available in a file type but not other. For this exercise, the following variables have been deemed of interest for the analysis: type of reference (conference paper or journal article), year of publication, author, document title, publication title and the presence of an abstract. Text is a type of unstructured data that requires meticulous processing before using it. For replicability purposes, the script for data wrangling, cleaning and overall processing of the topic model is available in the scripts section of the [GitHub](https://github.com/aguileracastillo/topic_model) repository for this project.
+The Digital Government Research Library version 17.5 is a large curated repository of publications contributing to the field of Digital Government Research (DGR), it contains more than 16500 references among its records. The most prevalent types of documents are conference papers (33.2%) and journal articles (50%). The inclusion criteria of the DGRL are: to have passed academic peer review, to be published in an academic journal, to be published in English language [@scholl2021]. The Library can be downloaded from the website [DGRL](https://faculty.washington.edu/jscholl/dgrl/index.php).
+
+As advised by [@barberá2021], there are "consequential decisions" in the methodological choices of automated text classification and the fact that human validation is a key component of text as data methods. The selection of a corpus in itself is deemed a crucial decision that can be prone to four types of bias: resource bias, incentive bias, medium bias and retrieval bias, these selection biases are well acknowledged in the text as data literature [@grimmer2022]. It may be probable that the DGRL v17.5 has omitted important research that is not included in this collection. All decisions concerning text as data methodologies are "consequential", our aim is to make our workflow reproducible by documenting all the choices in the scripts associated with this document.
+
+The script for the initial data cleaning and wrangling, including the R functions and packages used, is available for revision, clarity, and replicability. A second script describes the phase of pre-processing related to preparing the unstructured text data into a format that is usable for analysis. Steps like tokenization, removal of stopwords, symbols, and special characters, and conversion to lowercase, are part of this phase. The pre-processing was conducted in R statistical software using the functions of the quanteda R package [@benoit2018].
+
+The download package contains three types of bibliographic files BibTeX, RIS, and ENL (EndNote). In its raw and unprocessed form, the data has a large proportion of missing values, mostly clustered in metadata not considered relevant for the analysis. By exploring the BiBTeX, RIS and ENL files, we noticed that the data sets had a large amount of missing data and that some information was available in a file type but not other. For this exercise, the following variables have been deemed of interest for the analysis: type of reference (conference paper or journal article), year of publication, author, document title, publication title and the presence of an abstract. Text is a type of unstructured data that requires meticulous processing before using it. For replicability purposes, the script for data wrangling, cleaning and overall processing of the topic model is available in the scripts section of the [GitHub](https://github.com/aguileracastillo/topic_model) repository for this project.
 
 ```{r types of documents, echo=FALSE}
 by_type <- mf_ris %>% count(`type`) %>% arrange(desc(n))
@@ -158,11 +172,11 @@ dgrl175_tm %>% group_by(year.x) %>% count(sort = TRUE) %>%
   ylab ("Number of Documents")
 ```
 
-The workflow for topic modeling includes text pre-processing, meaning further data cleaning and data transformation. This means that before creating a corpus object with the available information from the DGRL v17.5, the text should be prepared before running the initial explorations. Our main unit of analysis is the abstract of the journal articles contained in the processed data set of the DGRL v17.5. Text as a type of unstructured data can be structured for processing using the bag of words approach or the splitting of abstracts into separate word units or terms and every occurrence of a term is defined as a token. The creation of a bag of words is known as tokenizing. The bag of words approach deliberately ignores the syntax or structure of the text, additional treatment of text include the elimination of punctuation, transform each word to lowercase and in some cases stemming which is a way to reduce a word to its stem or root in order to reduce the sparsity of the Document Frequency Matrix.
-
 Stop words are context specific
 
 Split into train and test data set Define K perplexity Asmussen (more or less topics) granularity.
+
+//
 
 LDA? Unsupervised learning... latent topics.
 
